# replicate-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
examples/: basic_prediction.rs  file_handling.rs  multipart_upload.rs  retry_demo.rs  test_token.rs  timeout_demo.rs
src/: client.rs  error.rs  lib.rs
src/api/: files.rs  mod.rs  predictions.rs
src/http/: client.rs  mod.rs
src/models/: common.rs  file.rs  mod.rs  prediction.rs
tests/: integration_test.rs  multipart_tests.rs
